# Programing-Robots-ROS

./: .gitignore  README.md  install_ros.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/basics/: Complex.h  TalkAction.h  TalkActionFeedback.h  TalkActionGoal.h  TalkActionResult.h  TalkFeedback.h  TalkGoal.h  TalkResult.h  TimerAction.h  TimerActionFeedback.h  TimerActionGoal.h  TimerGoal.h  (+6 more)
src/: install_ros.sh
src/basics/: CMakeLists.txt  chatter.bag  data.yaml  package.xml
src/basics/src/: cosine_wave.py  doubler.py  doubler.py~  fancy_action_client.py  fancy_action_server.py  message_publisher.py  message_subscriber.py  muth_node.py  pyttsx_client.py  pyttsx_example.py  pyttsx_server.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  sine_wave.py  test_talker.py  topic_publisher.py  topic_subscriber.py
src/cougarbot_moveit_config/: .setup_assistant
src/cougarbot_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cpp/: CMakeLists.txt.org
src/mapping/: CMakeLists.txt
src/muth_pkg/: CMakeLists.txt
src/navigation/: package.xml
src/patrol/: CMakeLists.txt
src/stockroom_bot/: generate_codes_and_materials.py  go_to_bin.py  gripper.py  look_at_bin.py  pick_up_item.py  product_11.material  sb.sh  stock_products.py  tuck_arm.py
src/stuff/: CMakeLists.txt  CMakeLists.txt~  actuator.py  fake_actuator.py  fake_sensor.py  service_sensor.py  topic_sensor.py  topic_sensor2.py  topic_sensor3.py
src/teleopbot/: CMakeLists.txt
src/tortoisebot/: tortoisebot.gv  tortoisebot1.urdf  tortoisebot2.urdf
(+337 files in other folders)
